fix issue with link underlines on safari

--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,10 @@ h2 {
 a {
   color: light-dark(var(--color-dark), var(--color-light));
   font-weight: bold;
-  text-decoration: solid underline .25rem light-dark(var(--color-orange-dark), var(--color-orange-light));
+  text-decoration: underline;
+  text-decoration-style: solid;
+  text-decoration-thickness: .25rem;
+  text-decoration-color: light-dark(var(--color-orange-dark), var(--color-orange-light));
   transition: text-decoration-thickness .5s;
   margin: 0 .25rem;
 }
